RESOLVED FIXED238653
[Ruby] Statically positioned out-of-flow block boxes are mispositioned
https://bugs.webkit.org/show_bug.cgi?id=238653
Summary [Ruby] Statically positioned out-of-flow block boxes are mispositioned
alan
Reported 2022-03-31 21:11:51 PDT
ssia
Attachments
Patch (7.39 KB, patch)
2022-03-31 21:54 PDT, alan
no flags
Patch (8.71 KB, patch)
2022-04-01 06:06 PDT, alan
no flags
alan
Comment 1 2022-03-31 21:54:16 PDT
alan
Comment 2 2022-04-01 06:06:35 PDT
Radar WebKit Bug Importer
Comment 3 2022-04-01 08:11:24 PDT
EWS
Comment 4 2022-04-01 11:42:44 PDT
Committed r292226 (249129@main): <https://commits.webkit.org/249129@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 456355 [details].
Note You need to log in before you can comment on or make changes to this bug.